FEAT: IDE Unfurl - Completed document view tab and extended button style class to handle named hrefs

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -556,80 +556,80 @@
 							<a href="documentation" target="_blank">
                 <button class="doc-button">Full documentation</button>
               </a>
-							<ul id="docsParent" class="sections">
-								<li>
-									<input type="checkbox" class="docs" id="tit0">
-									<label for="tit0" class="docSectionHeader">The Bela Context</label>
-									<ul id="contextDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit1">
-									<label for="tit1" class="docSectionHeader">The API</label>
-									<ul id="APIDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit2">
-									<label for="tit2" class="docSectionHeader">Utilities</label>
-									<ul id="utilityDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit3">
-									<label for="tit3" class="docSectionHeader">The Scope</label>
-									<ul id="ScopeDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit4">
-									<label for="tit4" class="docSectionHeader">OSC Server</label>
-									<ul id="OSCServerDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit5">
-									<label for="tit5" class="docSectionHeader">OSC Client</label>
-									<ul id="OSCClientDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit6">
-									<label for="tit6" class="docSectionHeader">OSC Message Factory</label>
-									<ul id="OSCMessageFactoryDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit7">
-									<label for="tit7" class="docSectionHeader">UDP Server</label>
-									<ul id="UdpServerDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit8">
-									<label for="tit8" class="docSectionHeader">UDP Client</label>
-									<ul id="UdpClientDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit9">
-									<label for="tit9" class="docSectionHeader">Midi</label>
-									<ul id="MidiDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit10">
-									<label for="tit10" class="docSectionHeader">Midi Parser</label>
-									<ul id="MidiParserDocs" class="subsections">
-									</ul>
-								</li>
-								<li>
-									<input type="checkbox" class="docs" id="tit11">
-									<label for="tit11" class="docSectionHeader">WriteFile data logging</label>
-									<ul id="WriteFileDocs" class="subsections">
-									</ul>
-								</li>
-							</ul>
+							<div id="docsParent" class="sections">
+
+                  <button class="accordion" data-accordion-for="bela-context">The Bela Context</button>
+                  <div class="panel" data-accordion="bela-context">
+  									<ul id="contextDocs" class="subsections" data-docs-context>
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="api">The API</button>
+                  <div class="panel" data-accordion="api">
+  									<ul id="APIDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="utilities">Utilities</button>
+                  <div class="panel" data-accordion="utilities">
+  									<ul id="utilityDocs" class="subsections" data-docs-utility>
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="scope">The Scope</button>
+                  <div class="panel" data-accordion="scope">
+  									<ul id="ScopeDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="osc-server">OSC Server</button>
+                  <div class="panel" data-accordion="osc-server">
+  									<ul id="OSCServerDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="osc-client">OSC Client</button>
+                  <div class="panel" data-accordion="osc-client">
+  									<ul id="OSCClientDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="osc-message-factory">OSC Message Factory</button>
+                  <div class="panel" data-accordion="osc-message-factory">
+  									<ul id="OSCMessageFactoryDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="udp-server">UDP Server</button>
+                  <div class="panel" data-accordion="udp-server">
+  									<ul id="UdpServerDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="udp-client">UDP Client</button>
+                  <div class="panel" data-accordion="udp-client">
+  									<ul id="UdpClientDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="midi">Midi</button>
+                  <div class="panel" data-accordion="midi">
+  									<ul id="MidiDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="midi-parser">Midi Parser</button>
+                  <div class="panel" data-accordion="midi-parser">
+  									<ul id="MidiParserDocs" class="subsections">
+  									</ul>
+                  </div>
+
+                  <button class="accordion" data-accordion-for="writefile-data-logging">WriteFile Data Logging</button>
+                  <div class="panel" data-accordion="writefile-data-logging">
+  									<ul id="WriteFileDocs" class="subsections">
+  									</ul>
+                  </div>
+							</div>
             </div>
           </section>
         </div>
