--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -19,7 +19,7 @@
       <div class="file-status">
 				<span class="project">Current project: <span class="current" data-current-project>None</span></span>
 				<span class="file">Current file: <span class="current" data-current-file>None</span></span>
-        <span class="status"><span class="status" data-current-status></span></span>
+        <span><span class="status" data-current-status-title></span> <span class="current" data-current-status></span></span>
 			</div>
 
       <div class="toolbar" id="toolbar" data-toolbar>
