FEAT: IDE Unfurl - Documentation view now lists example usage correctly

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -560,73 +560,73 @@
 
                   <button class="accordion" data-accordion-for="bela-context">The Bela Context</button>
                   <div class="panel" data-accordion="bela-context">
-  									<ul id="contextDocs" class="subsections" data-docs-context>
+  									<ul class="subsections" data-docs-context>
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="api">The API</button>
                   <div class="panel" data-accordion="api">
-  									<ul id="APIDocs" class="subsections">
+  									<ul class="subsections" data-docs-api>
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="utilities">Utilities</button>
                   <div class="panel" data-accordion="utilities">
-  									<ul id="utilityDocs" class="subsections" data-docs-utility>
+  									<ul class="subsections" data-docs-utility>
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="scope">The Scope</button>
                   <div class="panel" data-accordion="scope">
-  									<ul id="ScopeDocs" class="subsections">
+  									<ul data-docs="ScopeDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="osc-server">OSC Server</button>
                   <div class="panel" data-accordion="osc-server">
-  									<ul id="OSCServerDocs" class="subsections">
+  									<ul data-docs="OSCServerDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="osc-client">OSC Client</button>
                   <div class="panel" data-accordion="osc-client">
-  									<ul id="OSCClientDocs" class="subsections">
+  									<ul data-docs="OSCClientDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="osc-message-factory">OSC Message Factory</button>
                   <div class="panel" data-accordion="osc-message-factory">
-  									<ul id="OSCMessageFactoryDocs" class="subsections">
+  									<ul data-docs="OSCMessageFactoryDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="udp-server">UDP Server</button>
                   <div class="panel" data-accordion="udp-server">
-  									<ul id="UdpServerDocs" class="subsections">
+  									<ul data-docs="UdpServerDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="udp-client">UDP Client</button>
                   <div class="panel" data-accordion="udp-client">
-  									<ul id="UdpClientDocs" class="subsections">
+  									<ul data-docs="UdpClientDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="midi">Midi</button>
                   <div class="panel" data-accordion="midi">
-  									<ul id="MidiDocs" class="subsections">
+  									<ul data-docs="MidiDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="midi-parser">Midi Parser</button>
                   <div class="panel" data-accordion="midi-parser">
-  									<ul id="MidiParserDocs" class="subsections">
+  									<ul data-docs="MidiParserDocs" class="subsections">
   									</ul>
                   </div>
 
                   <button class="accordion" data-accordion-for="writefile-data-logging">WriteFile Data Logging</button>
                   <div class="panel" data-accordion="writefile-data-logging">
-  									<ul id="WriteFileDocs" class="subsections">
+  									<ul data-docs="WriteFileDocs" class="subsections">
   									</ul>
                   </div>
 							</div>
