FEAT: IDE Unfurl - Implemented current file selector on project view as well as removing more ID selectors in favour of data bindings

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -121,7 +121,7 @@
                 <button class="button fileManager" data-func="renameFile">Rename</button>
                 <button  class="button fileManager" data-func="deleteFile">Delete</button>
                 <span class="spacer"></span>
-                <input type="file" id="uploadFileInput" multiple></input>
+                <input type="file" id="uploadFileInput" data-upload-file-input multiple></input>
               </div>
 
               <button class="accordion" data-accordion-for="project-files">Project files</button>
