FEAT: IDE Unfurl - Removed ID selectors from gitview in favour of data bindings

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -149,7 +149,7 @@
 
                     <tr>
                       <td>
-                        <select id="branches" class="git-manager" data-func="checkout"></select>
+                        <select id="branches" class="git-manager" data-git-branches data-func="checkout"></select>
                         <button class="git-manager" data-func="branch">Create new branch</button>
                       </td>
                     </tr>
@@ -163,7 +163,7 @@
                       <!--<button class="git-manager" data-func="command" data-command="revert HEAD">revert previous commit</button>-->
                     </tr>
                     <tr>
-                      <td><select id="commits" class="git-manager" data-func="checkout"></select></td>
+                      <td><select id="commits" class="git-manager" data-git-commits data-func="checkout"></select></td>
                     </tr>
 
                     <tr>
