FEAT: IDE Unfurl - Databindings on board diagrams

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -544,7 +544,7 @@
                 <h1>Pin Diagram<hr /></h1>
               </div>
               <div id="pin_container">
-                <object data="diagram.html" id="pin_diagram_object">
+                <object data="diagram.html" id="pin_diagram_object" data-pin-diagram>
                   Your browser doesn’t support the object tag.
                 </object>
               </div>
