FEAT: IDE Unfurl - This is the last of the front end databinding that's necessary. All IDs are now purely for display. All classes EXCEPT those used by the views are for styling purposes too.

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -48,17 +48,17 @@
 
       <!-- media divs -->
 
-      <div id="img-display-parent">
-				<img id="img-display"/>
+      <div id="img-display-parent" data-img-display-parent>
+				<img id="img-display" data-img-display />
 			</div>
-			<div id="pd-svg-parent">
-				<div id="pd-svg"></div>
+			<div id="pd-svg-parent" data-pd-svg-parent>
+				<div id="pd-svg" data-pd-svg></div>
 			</div>
-			<div id="audio-parent">
-				<audio id="audio" controls></audio>
+			<div id="audio-parent" data-audio-parent>
+				<audio id="audio" data-audio controls></audio>
 			</div>
 
-      <pre id="editor" class="editor"></pre>
+      <pre id="editor" class="editor" data-editor></pre>
 
       <!-- tabs -->
 
