FEAT: IDE Unfurl - Added examples tab title

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -179,6 +179,9 @@
               </div>
             </div>
             <div class="tab-info" data-tab="examples">
+              <span class="title-container">
+                <h1>Examples<hr /></h1>
+              </span>
               <ul class="projectManager" data-examples data-func="openExample"></ul>
             </div>
             <div class="tab-info" data-tab="settings">
