Rearranging of project explorer tab

--- a/IDE/public/index.html
+++ b/IDE/public/index.html
@@ -94,43 +94,55 @@
                 <h1>Project Explorer<hr /></h1>
               </span>
               <span class="dropdown" data-projects>
-							  <button class="dropbtn" data-dropdown-for="project">Select a project&hellip;</button>
+							  <button class="dropbtn" data-dropdown-for="project">Your projects</button>
                 <div class="dropdown-content" data-dropdown="project">
                   <select class="projectManager" id="projects" data-projects-select data-func="openProject">
   									<option selected>Choose a project from your board</option>
 							    </select>
                 </div>
 							</span>
+              <button id="new" class="create-project projectManager" data-func="newProject">New Project</button>
 
-              <button id="new" class="create-project projectManager" data-func="newProject">Create new</button>
-
-              <button class="accordion" data-accordion-for="project-controls">Manage current project</button>
-							<div class="panel" data-accordion="project-controls">
-                <button id="saveas" class="projectManager" data-func="saveAs">Save project as&hellip;</button>
-                <button id="cleanProject" class="projectManager" data-func="cleanProject">Clean project</button>
-                <button id="deleteProject" class="projectManager" data-func="deleteProject">Delete project</button>
+              <div class="open-project">
+                <span class="project">Current project: <span class="current" data-current-project>None</span></span>
               </div>
 
-              <button class="accordion" data-accordion-for="manage-files">Manage project files</button>
-              <div class="panel" data-accordion="manage-files">
-                <button class="button fileManager" data-func="newFile">New file</button>
-                <button class="button fileManager" data-func="uploadFile" id="uploadFile">Upload</button>
-                <a data-download-file href="/download" download>
-                  <button id="downloadFile" class="button fileManager">Download</button>
-                </a>
-                <button class="button fileManager" data-func="renameFile">Rename</button>
-                <button  class="button fileManager" data-func="deleteFile">Delete</button>
-                <span class="spacer"></span>
-                <input type="file" id="uploadFileInput" data-upload-file-input multiple></input>
-              </div>
 
-              <button class="accordion" data-accordion-for="project-files">Project files</button>
+              <button class="accordion" data-accordion-for="project-files">Project contents</button>
               <div class="panel" data-accordion="project-files">
                 <ul class="file-list" data-file-list>
                 </ul>
               </div>
 
-              <button class="accordion" data-accordion-for="git">Git</button>
+              <button class="accordion" data-accordion-for="project-controls">Project actions</button>
+
+              <div class="panel" data-accordion="project-controls">
+                <div class="button-container">
+                  <button class="button fileManager" data-func="newFile">Create new file</button>
+                  <button class="button fileManager" data-func="uploadFile" id="uploadFile">Upload file</button>
+                  <button id="saveas" class="projectManager" data-func="saveAs">Save project as&hellip;</button>
+                </div>
+                <div class="button-container">
+                  <button id="cleanProject" class="projectManager" data-func="cleanProject">Clean</button>
+                  <button id="deleteProject" class="projectManager" data-func="deleteProject">Delete project</button>
+                </div>
+                  
+              </div>
+
+
+              <button class="accordion" data-accordion-for="manage-files">Current file actions</button>
+              <div class="panel" data-accordion="manage-files">
+                <div class="button-container">
+                  <button class="button fileManager" data-func="renameFile">Rename</button>
+                  <button  class="button fileManager" data-func="deleteFile">Delete</button>
+                  <a data-download-file href="/download" download><button id="downloadFile" class="button fileManager">Download</button></a>
+                </div>
+                <input type="file" id="uploadFileInput" class="hidden" data-upload-file-input multiple></input>
+              </div>
+
+              
+
+              <button class="accordion" data-accordion-for="git">Git manager</button>
               <div class="panel" data-accordion="git">
 
                 <div class="git-no-repo" data-git-no-repo>
