--- a/IDE/public/scope/index.html
+++ b/IDE/public/scope/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>BelaScope</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 	</head>
 	<body>
 		
