Corrected the text class for the intro sentence.

--- a/IDE/public/diagram_mini.html
+++ b/IDE/public/diagram_mini.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="container">
-        <p class="diagram_text">Hover over the coloured sections for more information.</p>
+        <p class="diagram-text">Hover over the coloured sections for more information.</p>
         <div id="squares">
 
         <div id="image">
